# beamlime

./: .buildinfo  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  configure-kafka.sh  dashboard_mockup.py  docker-compose-beamlime-nmx.yml  docker-compose-beamlime.yml  docker-compose-reduction.yml  docker-compose.yml  genindex.html  index.html  kafka_widget_demo.py  objects.inv  odin-demo.sh  output.txt  panel-grid-layout.py  panel-image-updates.py  panel-kafka-config.py  panel-matplotlib-interactive.py  panel-polydraw.py  panel-roi.py  polydraw_demo.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  stream.txt  tox.ini  workflow_example.ipynb
.github/workflow/: ci.yaml
.github/workflows/: browser-test.yml  ci-release.yml  ci.yml  docs.yml  main.yml  manual-docs.yml  manual-test.yml  optional.yml  plugin.yml  pr.yml  pr_and_main.yml  pr_and_main.yml.backup  release.yml  reusable-ci-setup.yml  reusable-docs.yml  reusable-static.yml  reusable-test.yml  test.yml
_modules/: index.html  logging.html  typing.html
_modules/beamlime/: stateless_workflow.html  workflow_protocols.html
_modules/rich/: logging.html
_sources/about/: ess-instruments.ipynb  index.md
_sources/api-reference/: index.md
_sources/developer/: async_programming.md  benchmark.ipynb  dependency-management.md  index.md
_sources/user-guide/: adding-new-instruments.md  getting-started.ipynb  index.md  installation.md  live_data_reduction.ipynb
_static/: documentation_options.js
about/: ess-instruments.html  index.html
api-reference/: index.html
conda/: meta.yaml
developer/: async_programming.html  benchmark.html  coding-conventions.html  dependency-management.html  getting-started.html  index.html
docs/: blueprint.ipynb  conf.py  diagram.py  fake_2d_image.ipynb  index.md  index.rst  run_example.py
docs/_static/: draw_icon.py  draw_logo.py
docs/_templates/: doc_version.html
docs/about/: calculations.py  data.py  environments.py  ess-instruments.ipynb  index.md  loader.py  runner.py  visualize.py
docs/api-reference/: index.md
docs/developer/: benchmark.ipynb  dependency-management.md  getting-started.md  index.md
docs/environments/: dev-env.yaml  index.md  kafka.md  test-env.yaml
docs/getting-started/: index.md  live_data_reduction.ipynb
docs/resources/: diagram.py  draw_logo.py
docs/user-guide/: adding-new-instruments.md  dream-demo.md  getting-started.ipynb  index.md  installation.md  live_data_reduction.ipynb  services.md
environments/: index.html  kafka.html
examples/: reduction_widget_demo.py
experiments/: bokeh-app.py
project/: planning.md
requirements/: base.in  base.txt  basetest.in  basetest.txt  benchmark.in  benchmark.txt  ci.in  ci.txt  dashboard.in  dashboard.txt  dev.in  dev.txt  docs-manual.in  docs-manual.txt  docs.in  docs.txt  extra.in  extra.txt  make_base.py  mypy.txt  nightly.in  nightly.txt  plugin.in  plugin.txt  static.txt  stream.in  stream.txt  test.in  test.txt  wheel.txt  wheels.txt
resources/: draw_icon.py  draw_logo.py
scripts/: README.md  beamlime-dashboard.sh  beamlime-dashboard@.service  beamlime-detector.sh  beamlime-detector@.service  log_producer.ipynb  setup-kafka-topics.sh
src/: blueprint.ipynb  test_executable.py
src/beamlime/: __init__.py  __main__.py  _nexus_helpers.py  complete_binders.py  empty_binders.py  empty_factory.py  empty_providers.py  fakes.py  parameter_models.py  ready_factory.py  service_factory.py  sinks.py  stateless_workflow.py  workflow_protocols.py
src/peek_data/: __init__.py
tests/: bifrost_test.py  conftest.py  local_plugin.py  logging_test.py  message_test.py  minimum.py  monitor_data_handler_test.py  package_test.py  processor_test.py  protocol_test.py  service_test.py  test_helper.py
tests/applications/: controller_test.py  coroutine_mixin_test.py  daemon_interface_test.py  fake.py  flag_control_mixin_test.py  interface_test.py  log_mixin_test.py  multiple_modules_datagroup.json  nexus_helpers_test.py  playwright_testing.py  streaming_module_test.py  test_application_handlers.py  test_fake.py  test_kafka_simulator.py  test_listeners.py  test_nexus_helpers.py  test_stateless_workflow.py  test_workflow_plugins.py  ymir.json  ymir_detectors.json
tests/benchmarks/: benchmark_test.py  calculations.py  environments.py  ess_requirements.py  loader.py  loader_test.py  requirements.py  runner.py  runner_test.py
tests/communication/: pipe_async_test.py  pipe_provider_test.py  pipe_test.py  pipeobject_test.py  readablebuffer_test.py
tests/communications/: broker_test.py  interface_test.py  mock_helpers.py
tests/config/: builders_test.py  config_loader_test.py  instrument_test.py  models_test.py  streams_test.py  workflow_params_test.py  workflow_spec_test.py
tests/constructors/: binder_context_test.py  binder_magicmethod_test.py  binder_test.py  cached_provider_test.py  container_test.py  factory_base_test.py  factory_registration_test.py  factory_test.py  generic_provider_test.py  inspection_test.py  preset_binder.py  preset_factory.py  preset_providers.py  provider_context_test.py  provider_decorator_test.py  provider_group_test.py  provider_test.py  providers_clear_test.py  providers_test.py  singleton_provider_test.py
tests/core/: job_manager_test.py  job_test.py  message_batcher_test.py  protocol_test.py  schedulers_test.py  serialization_test.py
tests/dashboard/: background_message_bridge_test.py  component_data_key_test.py  config_backed_param_test.py  config_service_test.py  controller_factory_test.py  data_forwarder_test.py  data_service_test.py  data_subscriber_test.py  message_bridge_test.py  orchestrator_test.py  schema_validator_test.py  scipp_holoviews_compat.py  scipp_to_holoviews_test.py  stream_manager_test.py  throttling_message_handler_test.py  workflow_config_service_test.py  workflow_controller_test.py  workflow_ui_helper_test.py
user-guide/: adding-new-instruments.html  getting-started.html  index.html  installation.html  live_data_reduction.html  services.html
(+563 files in other folders)
